Keep read-modify accesses to NetworkInterfaceMock::_alarms in one CS

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Hide

      Due to the nature of the bug, it's very hard to reproduce it. An example could be found here: #BF-15258

      Show
      Due to the nature of the bug, it's very hard to reproduce it. An example could be found here: #BF-15258
    • Service Arch 2020-02-24
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Both getting the top of `_alarms` and removing it must be in the same critical-section to avoid potential data races.

      https://github.com/mongodb/mongo/blob/7eda962b63ab11427889b13dc3fbbe6df0fd02fb/src/mongo/executor/network_interface_mock.cpp#L593-L605

            Assignee:
            Amirsaman Memaripour
            Reporter:
            Amirsaman Memaripour
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: