SERVER-46106 Keep read-modify accesses to NetworkInterfaceMock::_alarms in one CS